==============
Version 3.34.1
==============

- De-duplicate sessions on pure Xorg too
- Fix fast user switching by assuming the login screen VT is always the initial
  one
- Translation updates

==============
Version 3.34.0
==============
- Translation updates

===============
Version 3.33.92
===============
- Fix typo in debug message
- Revert vt changing fix, because it exposes logind bug and it wasn't quite right anyway
- Ensure login screen gets reaped when user switching
- Translation updates

===============
Version 3.33.90
===============
- Update for changes to gnome-settings-daemon
- initial-setup permissions fix
- allow users to set PATH from ~/.config/environmet
- support systemd user sessions
- misc warning fixes
- leak fix in libgdm
- vt changing fix
- drop some deprecations
- drop unused icons
- Translation updates

==============
Version 3.33.4
==============
- Fix session search directories
- Kill user sessions when stopping gdm
- Add way for sessions to register when they successfully started
- Translation updates

==============
Version 3.32.0
==============
- No updates

===============
Version 3.31.91
===============
- Screen lock bypass fix (when timed login is enabled) (CVE-2019-3825)
- PAM file updates
- Improved debug logging
- Keyboard layout fixes
- Display foreach handling
- Translation updates

==============
Version 3.31.4
==============
- DOAP file fixes
- misc code clean ups
- filter out duplicates from session list
- Translation updates

==============
Version 3.30.2
==============
- Fix autologin crash
- Unlock keyring again on autologin with newerish systemds
- Fix initial-setup
- Translation updates

==============
Version 3.30.1
==============
- make udev rule configurable
- follow up fixes dealing with login screen reaping from two releases ago
- disable wayland on proprietary nvidia machines for now
- Translation updates

==============
Version 3.30.0
==============
- build fixes

===============
Version 3.29.92